--- a/DJIA/index.html
+++ b/DJIA/index.html
@@ -20,54 +20,54 @@
   </thead>
   <tbody>
     <tr>
-      <td>08/03/18</td>
-      <td>25,462.58</td>
-      <td>0.54%</td>
+      <td>10/18/18</td>
+      <td>25,379.45</td>
+      <td>-1.27%</td>
     </tr>
     <tr>
-      <td>08/06/18</td>
-      <td>25,502.18</td>
-      <td>0.16%</td>
+      <td>10/19/18</td>
+      <td>25,444.34</td>
+      <td>0.26%</td>
     </tr>
     <tr>
-      <td>08/07/18</td>
-      <td>25,628.91</td>
-      <td>0.50%</td>
-    </tr>
-    <tr>
-      <td>08/08/18</td>
-      <td>25,583.75</td>
-      <td>-0.18%</td>
-    </tr>
-    <tr>
-      <td>08/09/18</td>
-      <td>25,509.23</td>
-      <td>-0.29%</td>
-    </tr>
-    <tr>
-      <td>08/10/18</td>
-      <td>25,313.14</td>
-      <td>-0.77%</td>
-    </tr>
-    <tr>
-      <td>08/13/18</td>
-      <td>25,187.70</td>
+      <td>10/22/18</td>
+      <td>25,317.41</td>
       <td>-0.50%</td>
     </tr>
     <tr>
-      <td>08/14/18</td>
-      <td>25,299.92</td>
-      <td>0.45%</td>
+      <td>10/23/18</td>
+      <td>25,191.43</td>
+      <td>-0.50%</td>
     </tr>
     <tr>
-      <td>08/15/18</td>
-      <td>25,162.41</td>
-      <td>-0.54%</td>
+      <td>10/24/18</td>
+      <td>24,583.42</td>
+      <td>-2.41%</td>
     </tr>
     <tr>
-      <td>08/16/18</td>
-      <td>25,558.73</td>
-      <td>1.58%</td>
+      <td>10/25/18</td>
+      <td>24,984.55</td>
+      <td>1.63%</td>
+    </tr>
+    <tr>
+      <td>10/26/18</td>
+      <td>24,688.31</td>
+      <td>-1.19%</td>
+    </tr>
+    <tr>
+      <td>10/29/18</td>
+      <td>24,442.92</td>
+      <td>-0.99%</td>
+    </tr>
+    <tr>
+      <td>10/30/18</td>
+      <td>24,874.64</td>
+      <td>1.77%</td>
+    </tr>
+    <tr>
+      <td>10/31/18</td>
+      <td>25,115.76</td>
+      <td>0.97%</td>
     </tr>
   </tbody>
 </table>
@@ -85,76 +85,76 @@
   </thead>
   <tbody>
     <tr>
-      <td>Wal-Mart</td>
-      <td>WMT</td>
-      <td>98.64</td>
-      <td>8.42</td>
-      <td>9.33%</td>
-      <td>-0.11%</td>
-      <td>1.85%</td>
-    </tr>
-    <tr>
-      <td>Boeing</td>
-      <td>BA</td>
-      <td>345.98</td>
-      <td>14.22</td>
-      <td>4.29%</td>
-      <td>+17.32%</td>
-      <td>9.18%</td>
+      <td>Visa</td>
+      <td>V</td>
+      <td>137.85</td>
+      <td>5.09</td>
+      <td>3.83%</td>
+      <td>+20.90%</td>
+      <td>3.72%</td>
     </tr>
     <tr>
       <td>Caterpillar</td>
       <td>CAT</td>
-      <td>136.26</td>
-      <td>4.24</td>
-      <td>3.21%</td>
-      <td>-13.53%</td>
-      <td>3.61%</td>
+      <td>121.32</td>
+      <td>3.86</td>
+      <td>3.29%</td>
+      <td>-23.01%</td>
+      <td>3.28%</td>
+    </tr>
+    <tr>
+      <td>Microsoft</td>
+      <td>MSFT</td>
+      <td>106.81</td>
+      <td>3.08</td>
+      <td>2.97%</td>
+      <td>+24.87%</td>
+      <td>2.88%</td>
+    </tr>
+    <tr>
+      <td>Goldman Sachs</td>
+      <td>GS</td>
+      <td>225.37</td>
+      <td>6.09</td>
+      <td>2.78%</td>
+      <td>-11.54%</td>
+      <td>6.08%</td>
     </tr>
     <tr>
       <td>Cisco</td>
       <td>CSCO</td>
-      <td>45.16</td>
-      <td>1.30</td>
-      <td>2.96%</td>
-      <td>+17.91%</td>
-      <td>1.20%</td>
+      <td>45.75</td>
+      <td>1.17</td>
+      <td>2.62%</td>
+      <td>+19.45%</td>
+      <td>1.24%</td>
     </tr>
     <tr>
-      <td>Merck</td>
-      <td>MRK</td>
-      <td>68.85</td>
-      <td>1.48</td>
-      <td>2.20%</td>
-      <td>+22.36%</td>
-      <td>1.83%</td>
+      <td>Apple</td>
+      <td>AAPL</td>
+      <td>218.86</td>
+      <td>5.56</td>
+      <td>2.61%</td>
+      <td>+29.33%</td>
+      <td>5.91%</td>
     </tr>
     <tr>
-      <td>Verizon</td>
-      <td>VZ</td>
-      <td>54.27</td>
-      <td>1.03</td>
-      <td>1.93%</td>
-      <td>+2.53%</td>
-      <td>1.44%</td>
+      <td>DowDuPont Inc</td>
+      <td>DWDP</td>
+      <td>53.92</td>
+      <td>1.29</td>
+      <td>2.45%</td>
+      <td>-24.29%</td>
+      <td>1.46%</td>
     </tr>
     <tr>
-      <td>Travelers Inc.</td>
-      <td>UTX</td>
-      <td>133.31</td>
-      <td>2.26</td>
-      <td>1.72%</td>
-      <td>+4.50%</td>
-      <td>3.54%</td>
-    </tr>
-    <tr>
-      <td>Procter &amp; Gamble</td>
-      <td>PG</td>
-      <td>83.69</td>
-      <td>1.39</td>
-      <td>1.69%</td>
-      <td>-8.91%</td>
-      <td>2.22%</td>
+      <td>JPMorgan Chase</td>
+      <td>JPM</td>
+      <td>109.02</td>
+      <td>2.32</td>
+      <td>2.17%</td>
+      <td>+1.95%</td>
+      <td>2.94%</td>
     </tr>
   </tbody>
 </table>
@@ -172,76 +172,76 @@
   </thead>
   <tbody>
     <tr>
-      <td>Visa</td>
-      <td>V</td>
-      <td>140.65</td>
-      <td>0.94</td>
-      <td>0.67%</td>
-      <td>+23.36%</td>
-      <td>3.73%</td>
+      <td>Home Depot</td>
+      <td>HD</td>
+      <td>175.88</td>
+      <td>-0.36</td>
+      <td>-0.20%</td>
+      <td>-7.20%</td>
+      <td>4.75%</td>
     </tr>
     <tr>
-      <td>Walgreen</td>
-      <td>WBA</td>
-      <td>69.18</td>
-      <td>0.45</td>
-      <td>0.65%</td>
-      <td>-4.74%</td>
-      <td>2.62%</td>
+      <td>Johnson &amp; Johns</td>
+      <td>JNJ</td>
+      <td>139.99</td>
+      <td>-0.76</td>
+      <td>-0.54%</td>
+      <td>+0.19%</td>
+      <td>3.78%</td>
     </tr>
     <tr>
-      <td>Pfizer</td>
-      <td>PFE</td>
-      <td>41.42</td>
-      <td>0.26</td>
-      <td>0.63%</td>
-      <td>+14.36%</td>
-      <td>1.10%</td>
+      <td>Procter &amp; Gambl</td>
+      <td>PG</td>
+      <td>88.68</td>
+      <td>-0.51</td>
+      <td>-0.57%</td>
+      <td>-3.48%</td>
+      <td>2.39%</td>
     </tr>
     <tr>
-      <td>Nike</td>
-      <td>NKE</td>
-      <td>80.05</td>
-      <td>0.48</td>
-      <td>0.60%</td>
-      <td>+27.98%</td>
-      <td>2.12%</td>
+      <td>Travelers Compa</td>
+      <td>TRV</td>
+      <td>125.13</td>
+      <td>-0.74</td>
+      <td>-0.59%</td>
+      <td>-7.75%</td>
+      <td>3.38%</td>
     </tr>
     <tr>
-      <td>Coca-Cola</td>
-      <td>KO</td>
-      <td>46.22</td>
-      <td>0.14</td>
-      <td>0.30%</td>
-      <td>+0.74%</td>
-      <td>1.23%</td>
-    </tr>
-    <tr>
-      <td>Microsoft</td>
-      <td>MSFT</td>
-      <td>107.64</td>
-      <td>-0.02</td>
-      <td>-0.02%</td>
-      <td>+25.84%</td>
-      <td>2.86%</td>
-    </tr>
-    <tr>
-      <td>Disney</td>
-      <td>DIS</td>
-      <td>112.48</td>
-      <td>-0.37</td>
-      <td>-0.33%</td>
-      <td>+4.62%</td>
-      <td>2.98%</td>
+      <td>McDonald's</td>
+      <td>MCD</td>
+      <td>176.90</td>
+      <td>-1.59</td>
+      <td>-0.89%</td>
+      <td>+2.78%</td>
+      <td>4.78%</td>
     </tr>
     <tr>
       <td>Intel</td>
       <td>INTC</td>
-      <td>47.17</td>
-      <td>-0.29</td>
-      <td>-0.61%</td>
-      <td>+2.19%</td>
-      <td>1.25%</td>
+      <td>46.88</td>
+      <td>-0.88</td>
+      <td>-1.84%</td>
+      <td>+1.56%</td>
+      <td>1.27%</td>
+    </tr>
+    <tr>
+      <td>Verizon</td>
+      <td>VZ</td>
+      <td>57.09</td>
+      <td>-1.09</td>
+      <td>-1.87%</td>
+      <td>+7.86%</td>
+      <td>1.54%</td>
+    </tr>
+    <tr>
+      <td>Wal-Mart</td>
+      <td>WMT</td>
+      <td>100.28</td>
+      <td>-2.14</td>
+      <td>-2.09%</td>
+      <td>+1.55%</td>
+      <td>2.15%</td>
     </tr>
   </tbody>
 </table>
@@ -259,11 +259,11 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>0.97%</td>
-                        <td>1.43%</td>
-                        <td>3.41%</td>
-			            <td>2.96%</td>
-                        <td>17.51%</td>
+                        <td>0.53%</td>
+                        <td>-6.19%</td>
+                        <td>-1.36%</td>
+			            <td>1.18%</td>
+                        <td>7.17%</td>
                     </tr>
                 </tbody>
             </table>
@@ -272,27 +272,27 @@
                 <tbody>
                     <tr>
                         <th>50 Day MA</th>
-                        <td>25012.17</td>
+                        <td>25882.84</td>
                     </tr>
                     <tr>
                         <th>100 Day MA</th>
-                        <td>24727.97</td>
+                        <td>25456.20</td>
                     </tr>
                     <tr>
                         <th>200 Day MA</th>
-                        <td>24713.74</td>
+                        <td>25129.95</td>
                     </tr>
                     <tr>
                         <th>50 Day EWMA</th>
-                        <td>25080.80</td>
+                        <td>25596.71</td>
                     </tr>
                     <tr>
                         <th>100 Day EWMA</th>
-                        <td>24870.70</td>
+                        <td>25461.64</td>
                     </tr>
                     <tr>
                         <th>200 Day EWMA</th>
-                        <td>24400.99</td>
+                        <td>25002.47</td>
                     </tr>
                 </tbody>
             </table>
@@ -301,23 +301,23 @@
                 <tbody>
                     <tr>
                         <th>DJIA</th>
-                        <td>25558.73</td>
+                        <td>25115.76</td>
                     </tr>
                     <tr>
                         <th>1M MA</th>
-                        <td>25366.36</td>
+                        <td>25455.15</td>
                     </tr>
                     <tr>
                         <th>1M STD</th>
-                        <td>168.61</td>
+                        <td>678.80</td>
                     </tr>
                     <tr>
                         <th>Lower Bound</th>
-                        <td>25029.13</td>
+                        <td>24097.54</td>
                     </tr>
                     <tr>
                         <th>Upper Bound</th>
-                        <td>25703.58</td>
+                        <td>26812.76</td>
                     </tr>
                 </tbody>
             </table>
